[package]
name = "program2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.9.5"
borsh="0.9.3"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]